# RouteCode

./: .gitignore  .pre-commit-config.yaml  Build_portable.bat  CONTRIBUTING.md  Cargo.toml  LICENSE  LOOM.md  README.md  ROUTECODE.md  Release.bat  Ruff.bat  _fix_ui.py  cli_build_debug.bat  cli_build_release.bat  cli_release.bat  cli_run.bat  install.ps1  install.sh  loom.spec  pyproject.toml  routecode.spec  run_loomcli.py  run_routecode.py  snake_game.html  test.txt  test_progress.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.loomcli/skills/: lint.md
.routecode/skills/: test.md
Claude/docs/superpowers/plans/: 2026-04-01-snake-game.md
Claude/docs/superpowers/specs/: 2026-04-01-snake-game-design.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/ui/: mod.rs
libs/sdk/: Cargo.toml
libs/sdk/src/: lib.rs
libs/sdk/src/agents/: anthropic.rs  cloudflare.rs  gemini.rs  mod.rs  openai.rs  opencode.rs  openrouter.rs  traits.rs  types.rs  utils.rs
libs/sdk/src/core/: config.rs  message.rs  mod.rs  orchestrator.rs  tool_result.rs
libs/sdk/src/tools/: bash.rs  file_ops.rs  mod.rs  navigation.rs  registry.rs  traits.rs
libs/sdk/src/utils/: costs.rs  mod.rs  storage.rs  tokens.rs
scripts/: release.mjs  release.py
src/loomcli/: README.md  __init__.py  _release.py  _version.py  attachments.py  commands.py  config.py  context.py  context_manager.py  costs.py  events.py  git.py  logger.py  main.py  memory.py  models_db.py  notify.py  orchestrator.py  personalities.py  repl.py  skills.py  state.py  storage.py  system_prompt.py  task_manager.py  ui.py  updater.py  utils.py
src/loomcli/agents/: anthropic.py  base.py  deepseek.py  google.py  litellm_provider.py  openai.py  opencode_go.py  opencode_zen.py  openrouter.py  protocol.py  registry.py  transport.py
src/loomcli/bundled_skills/: help.md
src/loomcli/commands/: __init__.py  config.py  core.py  memory.py  session.py  tasks.py
src/loomcli/config/: models_db.py  settings.py  system_prompt.py
src/loomcli/core/: __init__.py  audit.py  context.py  context_manager.py  costs.py  errors.py  events.py  history.py  logger.py  models_db.py  orchestrator.py  path_guard.py  state.py  tokenizer.py
src/loomcli/domain/: attachments.py  personalities.py  skills.py  task_manager.py
src/loomcli/tools/: __init__.py  auth.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py  skill.py  task.py  webfetch.py
src/loomcli/ui/: __init__.py  console.py  dialogs.py  renderables.py  terminal.py  theme.py
src/loomcli/ui/dialogs/: __init__.py  base.py  palette.py  standard.py  widgets.py
src/loomcli/ui/repl/: __init__.py  app.py  handlers.py  layout.py  styles.py
src/loomcli/utils/: costs.py  errors.py  helpers.py  storage.py
src/routecode/: README.md  __init__.py  _release.py  ascii_logo.md  main.py  updater.py
src/routecode/agents/: base.py  cloudflare_provider.py  litellm_provider.py  mapping.py  registry.py  types.py
src/routecode/bundled_skills/: help.md
src/routecode/bundled_skills/frontend/: README.md
src/routecode/bundled_skills/skill-creation/: README.md
src/routecode/commands/: __init__.py  config.py  core.py  memory.py  session.py  skills.py  tasks.py
src/routecode/config/: __init__.py  models_db.py  settings.py  system_prompt.py
src/routecode/core/: __init__.py  audit.py  constants.py  container.py  context.py  context_manager.py  event_types.py  events.py  history.py  memory.py  orchestrator.py  path_guard.py  state.py  tokenizer.py
src/routecode/domain/: __init__.py  attachments.py  git.py  personalities.py  skills.py  task_manager.py
src/routecode/tools/: __init__.py  auth.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py  skill.py  task.py  web_search.py  webfetch.py
src/routecode/ui/: __init__.py  console.py  renderables.py  terminal.py  theme.py
src/routecode/ui/dialogs/: __init__.py  base.py  manager.py  palette.py  standard.py  widgets.py
src/routecode/ui/repl/: __init__.py  app.py  bindings.py  handlers.py  layout.py  styles.py
src/routecode/utils/: costs.py  errors.py  logger.py  paths.py  storage.py
tests/: test_cloudflare_native.py  test_file_edit.py  test_registry.py
