[project]
name = "routecode"
dynamic = ["version"]
description = "RouteCode — an AI coding assistant for your terminal"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "SpeerX", email = "anasrhnim07@gmail.com" }
]
keywords = ["ai", "cli", "terminal", "llm", "coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer[all]>=0.12.3",
    "prompt-toolkit>=3.0.43",
    "rich>=13.7.1",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "litellm>=1.40.0",
    "aiofiles>=23.2.1",
]
requires-python = ">=3.10"

# Both 'routecode' and 'routecode' invoke the same entry point
[project.scripts]
routecode         = "routecode.main:app"
routecode-release = "routecode._release:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pyinstaller>=6.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage      = "https://github.com/anasx07/routecode"
Repository    = "https://github.com/anasx07/routecode"
Documentation = "https://github.com/anasx07/routecode#readme"
"Bug Tracker" = "https://github.com/anasx07/routecode/issues"

[build-system]
requires      = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

# Version is derived automatically from git tags (v1.2.3 → "1.2.3")
[tool.setuptools_scm]
write_to = "src/routecode/_version.py"
fallback_version = "0.0.0-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
routecode = ["*.json", "bundled_skills/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", ".routecode", "venv", ".venv", "build", "dist"]
addopts = "--ignore=test.txt --ignore=test_progress.txt"
python_files = "test_*.py"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # type-checking imports
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "TCH004", # move import out of type-checking block
]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["routecode"]
extra-standard-library = ["dataclasses"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
