[package]
name = "routecode-cli"
version = "0.1.2"
edition = "2021"
authors = ["SpeerX <anasrhnim07@gmail.com>"]
description = "CLI application for RouteCode"

[dependencies]
routecode-sdk = { path = "../../libs/sdk" }
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
tui-textarea = "0.4"
crossterm = "0.27"
anyhow = "1.0"
serde_json = "1.0"
futures = "0.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
