[package]
name = "routecode-sdk"
version = "0.1.2"
edition = "2021"
authors = ["SpeerX <anasrhnim07@gmail.com>"]
description = "Core logic for RouteCode"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
toml = "0.8"
futures = "0.3"
tiktoken-rs = "0.5"
async-stream = "0.3"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"
